# ml-production-template

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
pipelines/: train_pipeline.py
scripts/: degrade_model.py
src/evaluation/: evaluate.py
src/features/: build_features.py  data_quality.py  schema.py
src/serving/: app.py
src/training/: train.py
tests/: test_data_quality.py  test_features.py  test_schema.py  test_serving.py  test_training.py
